--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="button_start_server">Start server</string>
     <string name="button_stop_server">Stop server</string>
     <string name="label_ip_address">IP Address</string>
+    <string name="start_on_boot">Start on boot</string>
 
     <string name="notification_channel_name">SMB Server</string>
     <string name="notification_channel_description">SMB server service notification</string>
